---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: ????
  Changes:
    - Refactored dependencyEntry and tierEntry to be the same
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2024-06-30
  Bugfixes:
    - Fixed Py's compatibility (accidentally passed a string instead of an array of strings)
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2024-06-30
  Changes:
    - Completely refactored how default configs are stored/created
    - Added a helper function to process each element of an array, instead of calling the individual processing function tens of times
  Bugfixes:
    - Fixed the possibility for the menu to be created twice
    - Fixed the chance for functions to accidentally be called twice when using the internal 'tick_later' function (tick 0)
    - Fixed a crash when loading an older save that had an invalidated reference to the menu
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2024-06-28
  Compatibility:
    - Fixed compatibility for Pyanodons Alternative Energy
      * Made the machine an ingredient rather than the category
    - Added compatibility for Pyanodons Hard Mode
    - Added compatibility for Space Exploration
      * Haven't added 'recipes' to properly handle off-planet resources.
  Commands:
    - Added a debug command for recursively seeking through invalid items in hopes of finding the cause
      Currently not that helpful due to it searching *every* recipe. It's better to just do it manually :(
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2024-06-26
  Bugfixes:
    - Nullius now has injected recipes to match the asteroid mining drones.